--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@cfx-kit/wallet-avatar": "^0.0.5",
+    "@noble/curves": "^1.8.1",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.1",
@@ -21,6 +22,7 @@
     "@tanstack/react-query-devtools": "^5.64.2",
     "@wagmi/core": "^2.16.3",
     "axios": "^1.7.9",
+    "bigint-crypto-utils": "^3.3.0",
     "bignumber.js": "^9.1.2",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
