--- a/apps/examples/package.json
+++ b/apps/examples/package.json
@@ -48,6 +48,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-check-file": "^2.8.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
