--- a/apps/examples/.gitignore
+++ b/apps/examples/.gitignore
@@ -11,9 +11,10 @@ node_modules
 .next
 next-env.d.ts
 tsconfig.tsbuildinfo
+.vercel
+.wrangler
 
 # logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -25,4 +26,3 @@ pnpm-debug.log*
 
 # misc
 .DS_Store
-.vercel
