--- a/apps/examples/package.json
+++ b/apps/examples/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "build": "pnpx @cloudflare/next-on-pages",
+    "start": "wrangler pages dev",
     "test": "vitest run",
     "check-types": "tsc",
     "lint": "eslint --max-warnings 0 .",
@@ -39,6 +39,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.10",
     "@eslint/js": "^9.18.0",
     "@next/eslint-plugin-next": "^15.1.5",
     "@tanstack/eslint-plugin-query": "^5.64.2",
@@ -54,7 +55,6 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "husky": "^9.1.7",
     "lint-staged": "^15.4.1",
     "postcss": "^8.5.1",
     "postcss-import": "^16.1.0",
@@ -65,6 +65,7 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.2"
+    "vitest": "^3.0.2",
+    "wrangler": "^3.114.1"
   }
 }
