--- a/.github/workflows/deploy-examples.yaml
+++ b/.github/workflows/deploy-examples.yaml
@@ -22,6 +22,9 @@ jobs:
           node-version-file: .node-version
           cache: pnpm
 
+      - name: Install dependencies
+        run: pnpm install
+
       - name: Build
         run: pnpm run build
 
