--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "neox-tpke-monorepo",
   "private": true,
   "scripts": {
-    "dev": "turbo run dev",
     "build": "turbo run build",
-    "start": "turbo run start",
-    "test": "turbo run test",
     "check-types": "turbo run check-types",
-    "lint": "turbo run lint",
+    "dev": "turbo run dev",
     "format": "turbo run format",
-    "publish-packages": "turbo run build lint test && changeset version && changeset publish"
+    "lint": "turbo run lint",
+    "publish-packages": "turbo run build lint test && changeset version && changeset publish",
+    "start": "turbo run start",
+    "test": "turbo run test"
   },
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
     "turbo": "^2.4.4"
   },
+  "packageManager": "pnpm@10.5.2",
   "engines": {
-    "node": ">=22"
-  },
-  "packageManager": "pnpm@10.5.2"
+    "node": "22.x"
+  }
 }
