--- a/packages/neox-tpke/package.json
+++ b/packages/neox-tpke/package.json
@@ -21,10 +21,13 @@
   },
   "dependencies": {
     "@noble/curves": "^1.8.1",
+    "aes-js": "^3.1.2",
     "bigint-crypto-utils": "^3.3.0",
+    "hash.js": "^1.1.7",
     "viem": "^2.22.10"
   },
   "devDependencies": {
+    "@types/aes-js": "^3.1.4",
     "prettier": "^3.4.2",
     "vite": "^6.2.1",
     "vite-plugin-dts": "^4.5.3",
