--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,28 @@
-# Editor
+# editor
 .vscode/*
 !.vscode/extensions.json
 !.vscode/settings.json
 .idea
 
-# Dependencies
+# dependencies
 node_modules
 
-# Build
-dist
-.turbo
+# build
+.next
+next-env.d.ts
+tsconfig.tsbuildinfo
+.vercel
+.wrangler
 
-# Logs
+# logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-# Local
+# local
 *.local
 
-# Misc
+# misc
 .DS_Store
