Update deployment workflow to change working directory for examples from 'apps/examples' to root directory '.'

--- a/.github/workflows/deploy-examples.yaml
+++ b/.github/workflows/deploy-examples.yaml
@@ -36,6 +36,6 @@ jobs:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
-          workingDirectory: apps/examples
+          workingDirectory: .
           command: pages deploy
           packageManager: pnpm
