Add Apache License 2.0 to project
- Introduced LICENSE file containing the full text of the Apache License, Version 2.0.
- Updated package.json to specify the license as "Apache-2.0".
- Revised README.md to reflect the new licensing terms and included copyright notice for 2025 Bane Labs.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "neox-tpke-examples",
   "private": true,
   "type": "module",
+  "license": "Apache-2.0",
   "scripts": {
     "build": "pnpm exec next-on-pages",
     "check-types": "tsc",
